--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <!--warn -->
     <color name="color_warning">#b6062f</color>
     <color name="color_grey">#FF757575</color>
+    <drawable name="gray">#CECECE</drawable>
+    <drawable name="white">#fff</drawable>
 </resources>
