--- a/app/src/main/res/layout/localsetitem.xml
+++ b/app/src/main/res/layout/localsetitem.xml
@@ -44,6 +44,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:layout_weight="3" />
     </LinearLayout>
 
