--- a/app/src/main/res/layout/progress_step_dlg_layout.xml
+++ b/app/src/main/res/layout/progress_step_dlg_layout.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
     <ImageView
         android:id="@+id/image_update_result"
         android:layout_width="wrap_content"
@@ -16,9 +16,20 @@
         android:id="@+id/dlg_progressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="33dp"
         android:max="100"
         android:progress="50"/>
+    <com.warkiz.widget.IndicatorSeekBar
+        android:id="@+id/indicatorseekbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:isb_indicator_stay="true"
+        app:isb_seek_bar_type="continuous"
+        app:isb_show_indicator="true"
+        app:isb_tick_num="100"
+        app:isb_tick_type="oval" />
     <TextView
         android:layout_marginTop="20dp"
         android:id="@+id/update_info"
