--- a/app/src/main/res/layout/basicfragmentlayout.xml
+++ b/app/src/main/res/layout/basicfragmentlayout.xml
@@ -211,4 +211,8 @@
 
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#CFCFCF" />
 </LinearLayout>
