--- a/app/src/main/res/layout/iccard_meter_info_item_show.xml
+++ b/app/src/main/res/layout/iccard_meter_info_item_show.xml
@@ -13,14 +13,14 @@
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
-           android:layout_gravity="center_vertical"
+           android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/iccard_meter_data_item_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
-           android:layout_gravity="center_vertical"
+           android:gravity="center_vertical"
            />
 
    </LinearLayout>
