增加LOG的输出

--- a/app/src/main/res/layout/progress_step_dlg_layout.xml
+++ b/app/src/main/res/layout/progress_step_dlg_layout.xml
@@ -36,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:lines="6"
         android:text="正在写入..."
         />
     <LinearLayout
