--- a/app/src/main/res/layout/download_file_select.xml
+++ b/app/src/main/res/layout/download_file_select.xml
@@ -31,6 +31,14 @@
             android:textSize="25sp"
             android:layout_marginTop="30dp"
             />
+        <RadioButton
+            android:id="@+id/devices_sgugc"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="SGU-LC"
+            android:textSize="25sp"
+            android:layout_marginTop="30dp"
+            />
     </RadioGroup>
 
     <LinearLayout
