--- a/app/src/main/res/layout/localsetting_addr222_layout.xml
+++ b/app/src/main/res/layout/localsetting_addr222_layout.xml
@@ -11,6 +11,7 @@
         >
 
         <TextView
+            android:id="@+id/lable_show_info1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -55,6 +56,7 @@
         >
 
         <TextView
+            android:id="@+id/lable_show_info2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
